tests/recheck/tmp3e/__snapshots__/jsfmt.spec.js.snap
exports[`test e1.js 1`] = `
"// @flow

export type Action =
  | { type: \'QUX\' }
  | { type: \'BAR\' }
;

export const LIFE = 0;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1530
      return fromString(\" | \").join(path.map(print, \"types\"));
                               ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1530:32)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1481:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;

exports[`test e2.js 1`] = `
"// @flow

import type { Action } from \'./e1\';

const f = (): Action => {
  return { type: \'QUX\' };
}

import { LIFE } from \'./e1\';

(LIFE: 0);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/ast-types/lib/types.js:60
            throw new Error(str + \" does not match type \" + this);
            ^

Error: {type: NumericLiteralTypeAnnotation, start: 139, end: 140, loc: [object Object], value: 0, extra: [object Object]} does not match type Printable
    at Type.Tp.assert (/node_modules/ast-types/lib/types.js:60:19)
    at genericPrintNoParens (/src/printer.js:221:24)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1254:25)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
"
`;
